# ns

./: .gitignore  Cargo.toml  README.md  concat.sh  python_speed_comparisons.py  rerun_all.sh
info/: language_definition.MD  module_system.md  module_system_2.md  modules.md  modules_more.md  next_step.txt  nscargo_spec.md  spec_language.MD  spec_modules.md  tooling_plan.md
ns/: Cargo.toml
ns/src/: main.rs
ns_core/: Cargo.toml
ns_core/src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  opcode.rs  parser.rs  value.rs  vm.rs
